add unit testing tools

--- a/python/2.7/Makefile
+++ b/python/2.7/Makefile
@@ -1,7 +1,15 @@
-IMAGE=thiagofalcao/python2.7
+NAME = thiagofalcao/python2.7
+VERSION = 0.1.0
+
+.PHONY: all build run test
+
+all: build
 
 build:
-	docker build -t $(IMAGE) .
+	docker build -t $(NAME):$(VERSION) .
 
 run:
-	docker run -it $(IMAGE)
+	docker run -it $(NAME)
+
+test:
+	docker run -v $PWD:/app -w /app $(NAME) /bin/sh /app/test.sh
