add DEBIAN_FRONTEND noninteractive

--- a/opencv/3.2.0/Dockerfile
+++ b/opencv/3.2.0/Dockerfile
@@ -2,6 +2,8 @@ FROM thiagofalcao/python2.7
 
 MAINTAINER Thiago Falcao "thiagofalcao@gmail.com"
 
+ENV DEBIAN_FRONTEND noninteractive
+
 
 RUN apt-get update \
     && apt-get upgrade -y \
